--- a/assets/app.html
+++ b/assets/app.html
@@ -289,6 +289,14 @@
         <ul class="information-list">
           <li class="license-box information-box">
             <div>
+              <span class="product-name">golang.org/x/text</span>
+            </div>
+            <div class="link">
+              <a class="product-link" href="https://go.googlesource.com/text">https://go.googlesource.com/text</a>
+              <a class="license-link" href="https://go.googlesource.com/text/+/master/LICENSE">{{ or .BSD3ClauseLicense "BSD 3-clause license" }}</a>
+            </div>
+          <li class="license-box information-box">
+            <div>
               <span class="product-name">github.com/spf13/pflag</span>
             </div>
             <div class="link">
