style: title span

--- a/assets/app.html
+++ b/assets/app.html
@@ -86,7 +86,7 @@
           <path class="main-cover-circle-inactive stroke" d="M 100,10 L 100,10 A 90,90 0 0,1 100,190 L 100,190 A 90,90 0 0,1 100,10"></path>
       </svg>
     </div>
-    <cite id="main-box-title" class="main-box-text main-box-title">no title</cite>
+    <span id="main-box-title" class="main-box-text main-box-title">no title</span>
     <span id="main-box-artist" class="main-box-text main-box-artist">no artist</span>
   </section>
 </main>
