--- a/assets/app.html
+++ b/assets/app.html
@@ -169,17 +169,17 @@
       <article class="system-article-sub">
         <ul class="system-settings">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .ColorThreshold "Color threshold" }}</div>
-            <div class="system-setting-value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range"></div>
+            <div class="system-setting-desc" id="appearance-color-threshold-label">{{ or .ColorThreshold "Color threshold" }}</div>
+            <div class="system-setting-value-expand"><input id=appearance-color-threshold type="range" min=0 max=256 step=1 class="config-range" aria-labelledby="appearance-color-threshold-label"></div>
           <li class="note-line system-setting" id="config-appearance-animation">
-            <div class="system-setting-desc">{{ or .Animation "Animation" }}</div>
-            <input type="checkbox" id="appearance-animation" class="slideswitch">
+            <div class="system-setting-desc" id="appearance-animation-label">{{ or .Animation "Animation" }}</div>
+            <input type="checkbox" id="appearance-animation" class="slideswitch" aria-labelledby="appearance-animation-label">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .BackgroundImage "Background image" }}</div>
-            <input type="checkbox" id="appearance-background-image" class="slideswitch">
+            <div class="system-setting-desc" id="appearance-background-image-label">{{ or .BackgroundImage "Background image" }}</div>
+            <input type="checkbox" id="appearance-background-image" class="slideswitch" aria-labelledby="appearance-background-image-label">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .BackgroundImageBlur "Background image blur" }}</div>
-            <select class="tool-select value" id="appearance-background-image-blur">
+            <div class="system-setting-desc" id="appearance-background-image-blur-label">{{ or .BackgroundImageBlur "Background image blur" }}</div>
+            <select class="tool-select value" id="appearance-background-image-blur" aria-labelledby="appearance-background-image-blur-label">
               <option value="0">0</option>
               <option value="1">1</option>
               <option value="2">2</option>
@@ -189,14 +189,14 @@
               <option value="32">32</option>
             </select>
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .CircledImage "Circled image" }}</div>
-            <input type="checkbox" id="appearance-circled-image" class="slideswitch">
+            <div class="system-setting-desc" id="appearance-circled-image-label">{{ or .CircledImage "Circled image" }}</div>
+            <input type="checkbox" id="appearance-circled-image" class="slideswitch" aria-labelledby="appearance-circled-image-label">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .GridviewAlbum "Gridview album" }}</div>
-            <input type="checkbox" id="appearance-gridview-album" class="slideswitch">
+            <div class="system-setting-desc" id="appearance-gridview-album-label">{{ or .GridviewAlbum "Gridview album" }}</div>
+            <input type="checkbox" id="appearance-gridview-album" class="slideswitch" aria-labelledby="appearance-gridview-album-label">
           <li class="note-line system-setting" id="config-appearance-auto-hide-scrollbar">
-            <div class="system-setting-desc">{{ or .AutoHideScrollbar "Auto hide scrollbar" }}</div>
-            <input type="checkbox" id="appearance-auto-hide-scrollbar" class="slideswitch">
+            <div class="system-setting-desc" id="appearance-auto-hide-scrollbar-label">{{ or .AutoHideScrollbar "Auto hide scrollbar" }}</div>
+            <input type="checkbox" id="appearance-auto-hide-scrollbar" class="slideswitch" aria-labelledby="appearance-auto-hide-scrollbar-label">
         </ul>
       </article>
       <h1 class="system-article-sub-header">{{ or .Library "Library" }}</h1>
@@ -210,19 +210,19 @@
       <article class="system-article-sub">
         <ul class="system-settings">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .ListviewFollowsPlayback "Listview follows playback" }}</div>
-            <input type="checkbox" id="playback-view-follow" class="slideswitch">
+            <div class="system-setting-desc" id="playback-view-follow-label">{{ or .ListviewFollowsPlayback "Listview follows playback" }}</div>
+            <input type="checkbox" id="playback-view-follow" class="slideswitch" aria-labelledby="playback-view-follow-label">
         </ul>
       </article>
       <h1 class="system-article-sub-header" id="volume-header">{{ or .Volume "Volume" }}</h1>
       <article class="system-article-sub" id="volume-all">
         <ul class="system-settings">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .ShowVolumeNob "Show volume nob" }}</div>
-            <input type="checkbox" id="volume-show" class="slideswitch">
+            <div class="system-setting-desc" id="volume-show-label">{{ or .ShowVolumeNob "Show volume nob" }}</div>
+            <input type="checkbox" id="volume-show" class="slideswitch" aria-labelledby="volume-show-label">
           <li class="note-line system-setting">
-            <div class="system-setting-desc">{{ or .MaxVolume "Max volume" }}</div>
-            <select class="tool-select value" id="volume-max">
+            <div class="system-setting-desc" id="volume-max-label">{{ or .MaxVolume "Max volume" }}</div>
+            <select class="tool-select value" id="volume-max" aria-labelledby="volume-max-label">
               <option value="50">50</option>
               <option value="60">60</option>
               <option value="70">70</option>
