fix: add image and resize credits

--- a/assets/app.html
+++ b/assets/app.html
@@ -295,11 +295,27 @@
       <ul class="information-list">
         <li class="license-box information-box">
           <div>
+            <span class="product-name">golang.org/x/image</span>
+          </div>
+          <div class="link">
+            <a class="product-link" href="https://github.com/golang/image">https://github.com/golang/image</a>
+            <a class="license-link" href="https://github.com/golang/image/blob/master/LICENSE">{{ or .BSD3ClauseLicense "BSD 3-clause license" }}</a>
+          </div>
+        <li class="license-box information-box">
+          <div>
             <span class="product-name">golang.org/x/text</span>
           </div>
           <div class="link">
             <a class="product-link" href="https://go.googlesource.com/text">https://go.googlesource.com/text</a>
             <a class="license-link" href="https://go.googlesource.com/text/+/master/LICENSE">{{ or .BSD3ClauseLicense "BSD 3-clause license" }}</a>
+          </div>
+        <li class="license-box information-box">
+          <div>
+            <span class="product-name">github.com/nfnt/resize</span>
+          </div>
+          <div class="link">
+            <a class="product-link" href="https://github.com/nfnt/resize">https://github.com/nfnt/resize</a>
+            <a class="license-link" href="https://github.com/nfnt/resize/blob/master/LICENSE">{{ or .ISCLicense "ISC license" }}</a>
           </div>
         <li class="license-box information-box">
           <div>
